--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,4 +23,13 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
+  test:
+    
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Test
+      run: dotnet test --verbosity normal
+    
   
