--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
     - name: Test
       run: dotnet test HotelBooking_Spanish/HotelBooking.IntegrationTests/HotelBooking.IntegrationTests.csproj
     
